<resources>
    <string name="app_name">MyVoc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="foreign_word">foreign word</string>
    <string name="native_word">native word</string>
    <string name="save_btn">Save</string>
    <string name="add_new_word">Add New Word</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_new_word">New Word</string>
    <string name="action_dictionary">Dictionary</string>
    <string name="action_learn">Learn</string>
    <string name="title_activity_add_new_word">Add New Word</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_learn">Learn</string>
    <string name="submit_learn_activity">Submit</string>
    <string name="translation_learn_activity">Type a translation</string>
    <string name="edit_word">Edit</string>
    <string name="delete_word">Delete</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
