<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learnitgirl.myvoc.fragments.NewWordFragment">

    <EditText
        android:id="@+id/foreignWordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nativeWordEditText"
        android:layout_alignEnd="@+id/nativeWordEditText"
        android:layout_marginBottom="44dp"
        android:hint="@string/foreign_word"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/nativeWordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/native_word"
        android:textAlignment="center" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nativeWordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/save_btn" />

</RelativeLayout>
