<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/foreignWordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nativeWordEditText"
        android:layout_alignEnd="@+id/nativeWordEditText"
        android:layout_marginBottom="44dp"
        android:hint="@string/foreign_word"
        android:textAlignment="center"
        android:onClick="disableHint"/>

    <EditText
        android:id="@+id/nativeWordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/native_word"
        android:textAlignment="center"
        android:onClick="disableHint"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nativeWordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/save_btn" />
</RelativeLayout>
